# qatam

./: Cargo.toml  LICENSE  Procfile  README.md  grammar.txt  help.txt  تجربة.قتام
cli/: Cargo.toml
cli/src/: args.rs  main.rs
compiler/: Cargo.toml
compiler/src/: chunk.rs  error.rs  lib.rs  value.rs
docs/: البينات.md
examples/: tokens.slia  إنهاء_الجمل.قتام  التحكم_في_المسار.قتام  الدوال_الرياضية.قتام  تجارب.قتام  دوال.قتام  عبارات.قتام
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lib/: الأساسية.قتام  النصوص.قتام
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  operators.rs  token.rs
scripts/: dev.py  test.py
scripts/build-site/: index.js  package-lock.json  package.json
src/: ast.rs  chunk.rs  cli_reporter.rs  compiler.rs  debug.rs  lib.rs  main.rs  natives.rs  operators.rs  parser.rs  path.rs  qatam.rs  reporter.rs  token.rs  tokenizer.rs  utils.rs  value.rs  vm.rs
tests/: إنهاء_الجمل.قتام  الأخطاء-المسحية.قتام  الأخطاء.قتام  الاستيراد.قتام  التعامل_مع_الملفات.قتام  التكرار.قتام  الدوال.قتام  الدوال_الرياضية.قتام  القوائم.قتام  الكائنات.قتام  الكثير-من-الثوابت.قتام  الملفات.قتام  المهام.قتام  النصوص.قتام
tests/الأخطاء/: ألقي-داخل-دالة.قتام  ألقي-مباشرة.قتام  حاول-أمسك.قتام
tests/التوزيع/: أكثر-من-علامة-تساوي.قتام  الاستيراد.قتام  الدوال.قتام  القوائم-تعريف-خاص.قتام  القوائم-تعريف-عام.قتام  القوائم.قتام  القيم-الإفتراضية-في-التعريفات.قتام  القيم-الإفتراضية-في-تغيير-القيمة.قتام  القيم-الإفتراضية.قتام  الكائنات-تعريف-خاص.قتام  الكائنات-تعريف-عام.قتام  الكائنات.قتام  تغيير-القيمة.قتام  تغيير-قيمة-متغير-في-كائن.قتام  توزيع-خاطئ.قتام  توزيع-قائمة-على-عدد-غير-مناسب.قتام  عدد-العناصر-مختلف.قتام  قيمة-إفتراضية-في-كائن.قتام  لكل-في.قتام  مدخلات-الدوال.قتام
tests/الحلقات-التكرارية/: استخدام-إكسر-خارجهم.قتام  استخدام-واصل-خارجهم.قتام  طالما.قتام  كرر.قتام  لكل-في.قتام  واصل.قتام
tests/الدوال/: أكثر-من-255-مدخل.قتام  إجباري-بعد-إختياري.قتام  استخدام-أرجع-خارجهم.قتام  الإغلاق-على-المتغيرات.قتام  المدخلات-الإختيارية.قتام  عدد-غير-محدد-من-المدخلات.قتام  عدد-مدخلات-غير-صحيح.قتام
tests/الشروط/: إختصار-الطريق.قتام  إن.قتام  قفزة-عملاقة.قتام
tests/العبارات/: إختصار-قيمة-الخاصية.قتام  إنهاء-العبارات.قتام  التساوي.قتام  الجانب-الأيمن-المتغيرات.قتام  الفهرسة.قتام  (+12 more)
vm/: Cargo.toml
vm/src/: lib.rs  natives.rs
www/: Cargo.toml  package-lock.json  package.json  rollup.config.js
قتام/: Cargo.toml  help.md  operators.txt
قتام/src/: args.rs  ast.rs  chunk.rs  compiler.rs  lexer.rs  main.rs  natives.rs  operators.rs  parser.rs  path.rs  token.rs  tokenizer.rs  value.rs  vm.rs
(+89 files in other folders)
