[package]
name = "قتام"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
compiler = { path = "../compiler" }
exitcode = "1.1.2"
rustyline = "9.1.2"

[features]
debug-parser = ['parser/verbose']
debug-compiler = ['compiler/verbose']
debug = ['debug-parser', 'debug-compiler']
