[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
verbose = []

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
compiler = { path = "../compiler" }
colored = "2.0.0"
