[package]
name = "قتام"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
rand = "0.8.4"
rustyline = "9.1.2"
path-absolutize = "3.0.13"

[features]
debug = ["debug-ast", "debug-bytecode", "debug-execution"]
debug-ast = []
debug-bytecode = []
debug-execution = []